# v86

./: .mocharc.js  Cargo.nix  Cargo.toml  Makefile  flake.nix  package-lock.json  package.json
crates/derp-network/: Cargo.toml  build.rs
crates/derp-network/src/: crypto.rs  error.rs  lib.rs  mod.rs  network.rs  protocol.rs  protocol_test.rs  vm_network.rs
src/: config.js
src/browser/: derp_network_adapter.js  derp_protocol.js  main.js  network.js  starter.js  vmeffect_network.js
src/rust/: jit.rs  lib.rs  profiler.rs
src/rust/cpu/: cpu.rs  vga.rs
tests/browser/: derp_network_adapter.test.js  setup.js  vmeffect.js
