[package]
name = "derp-network"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "Window",
    "console"
]}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
bincode = "1.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
miniz_oxide = "0.7"
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
base64 = "0.21"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[build-dependencies]
cc = "1.0"
